HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuCaptureNonGpuSafe/Source/Main.uv
//! Rejected structured-parallelism specimen for non-GpuSafe captures.

public procedure gpuCaptureNonGpuSafeReference(context: Context) -> i32 {
    return parallel context~>gpu() {
        context
        0
    }
}
